src/test/deca/context/valid/created/selection-this.deca
class A {
	int a;
	void fonction(){
		this.a = 3;
	}
}
