src/test/deca/context/invalid/created/this-out-of-class.deca
{
	int a;
	this.a = 3;
}